--- a/V3.ipynb
+++ b/V3.ipynb
@@ -2873,7 +2873,7 @@
     "# Group \"Vict Descent\" into 5 groups \n",
     "cleanData[\"Vict Descent\"] = cleanData[\"Vict Descent\"].replace([\"A\", \"C\", \"J\", \"K\", \"V\", \"Z\"], \"Asian\")\n",
     "cleanData[\"Vict Descent\"] = cleanData[\"Vict Descent\"].replace([\"B\"], \"Black\")\n",
-    "cleanData[\"Vict Descent\"] = cleanData[\"Vict Descent\"].replace([\"H\"], \"Hispanic/Latino")\n",
+    "cleanData[\"Vict Descent\"] = cleanData[\"Vict Descent\"].replace([\"H\"], \"Hispanic/Latin/Mexican\")\n",
     "cleanData[\"Vict Descent\"] = cleanData[\"Vict Descent\"].replace([\"D\", \"F\", \"L\", \"O\", \"G\", \"P\", \"S\", \"U\"], \"Other\")\n",
     "cleanData[\"Vict Descent\"] = cleanData[\"Vict Descent\"].replace([\"I\", \"W\", \"X\"], \"White\")\n",
     "\n",
