--- a/LACrime.ipynb
+++ b/LACrime.ipynb
@@ -1985,7 +1985,7 @@
     "# Make a copy of the DataFrame\n",
     "dropNA_df = dropped_LAcrime_df.copy()\n",
     "\n",
-    "dropNA_df.dropna(subset=['Vict Descent', 'Premis Desc'], inplace=True)\n",
+    "dropNA_df.dropna(subset=[\"Vict Descent\", \"Premis Desc\"], inplace=True)\n",
     "dropNA_df"
    ]
   },
@@ -2419,7 +2419,7 @@
    ],
    "source": [
     "# replace blanks values in column Weapon Used Cd, and Weapon Desc with N/A for no weapon used\n",
-    "cleanData = dropNA_df.fillna(value='N/A')\n",
+    "cleanData = dropNA_df.fillna(value=\"N/A\")\n",
     "cleanData.info()"
    ]
   },
@@ -3548,14 +3548,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1b62036",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "id": "57261bf0",
    "metadata": {},
@@ -3604,22 +3596,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2a25b65",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d791bf8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
