--- a/final_project1.ipynb
+++ b/final_project1.ipynb
@@ -460,6 +460,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69bd7f0e",
+   "metadata": {},
+   "source": [
+    "<h1> Data Cleanup </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "1a5ea9cf",
@@ -1606,6 +1614,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac4ddd44",
+   "metadata": {},
+   "source": [
+    "<h1> Breakdown of Age Range </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "06ea537f",
@@ -1652,6 +1668,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5003a649",
+   "metadata": {},
+   "source": [
+    "<h1> Breakdown of Victim Gender </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "8f916778",
@@ -1692,6 +1716,14 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6713668b",
+   "metadata": {},
+   "source": [
+    "<h1> Breakdown of Victim Race </h1>"
    ]
   },
   {
@@ -1743,6 +1775,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13e7e660",
+   "metadata": {},
+   "source": [
+    "<h1> Crime and Area </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "5d70dfba",
@@ -1786,6 +1826,14 @@
     "# Show the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86d3eb9e",
+   "metadata": {},
+   "source": [
+    "<h1> Number of Crime Cases vs Weapon Used </h1>"
    ]
   },
   {
@@ -1881,6 +1929,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc6ff453",
+   "metadata": {},
+   "source": [
+    "<h1> Weapons Used Pie Chart </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "7612b798",
@@ -1919,6 +1975,14 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8334a68d",
+   "metadata": {},
+   "source": [
+    "<h1> Distribution of Status </h1>"
    ]
   },
   {
@@ -1962,6 +2026,14 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5196322b",
+   "metadata": {},
+   "source": [
+    "<h1> Timeline of Crime </h1>"
    ]
   },
   {
@@ -2016,6 +2088,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7354c34",
+   "metadata": {},
+   "source": [
+    "<h1> Weapons and Gender </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "989bf961",
@@ -2054,6 +2134,14 @@
     "plt.xticks(rotation=0)  # Keep x-axis labels horizontal\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61eb99bd",
+   "metadata": {},
+   "source": [
+    "<h1> Weapons and Race </h1>"
    ]
   },
   {
@@ -2102,6 +2190,14 @@
     "plt.xticks(rotation=0)  # Keep x-axis labels horizontal\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef24d034",
+   "metadata": {},
+   "source": [
+    "<h1> Plotting Crime Factors on Map </h1>"
    ]
   },
   {
@@ -2450,6 +2546,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97792e41",
+   "metadata": {},
+   "source": [
+    "<h1> Number of Crime Cases vs Time of Day </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "d1a34c72-c25b-43d1-8aed-ac3f5ad7565f",
@@ -2470,6 +2574,14 @@
     "LACrime_clean_loc=LACrime.copy()\n",
     "plt.hist(LACrime_clean_loc[\"TIME OCC\"],bins=24,rwidth=.9)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b83fec6",
+   "metadata": {},
+   "source": [
+    "<h1> Sex and Race Breakdown </h1>"
    ]
   },
   {
@@ -2620,6 +2732,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "075b1d1f",
+   "metadata": {},
+   "source": [
+    "<h1> Age Range and Crime </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "8e1eac5f",
@@ -2705,6 +2825,7 @@
    "id": "d9f96f4c",
    "metadata": {},
    "source": [
+    "<h1> Pie Chart of Bureau's & % of Cases in LA</h1>\n",
     "Code from Steven Joseph Islava"
    ]
   },
@@ -5795,7 +5916,7 @@
    "id": "1f2833e0",
    "metadata": {},
    "source": [
-    "Gender Crimes Mapped on Scatter Plot\n",
+    "<h1>Gender Crimes Mapped on Scatter Plot</h1>\n",
     "When considering \"Gender\" as a factor, our team wanted to look into which areas may have hotspot crime activity for a certain gender. Based on our scatter plots, we can see that there aren't any crime hotspots targeting a specific gender, and that either gender are at risk in most areas."
    ]
   },
